--- a/Atividades/Word Drop Express/index.html
+++ b/Atividades/Word Drop Express/index.html
@@ -45,7 +45,7 @@
     --sidePad: clamp(12px, 2vw, 26px);
 
     /* Animation speeds */
-    --locoDur: 6s;     /* locomotive crossing */
+    --locoDur: 7s;     /* locomotive crossing */
     --departDur: 4s;   /* wagons leaving */
   }
 
@@ -607,20 +607,41 @@
       requestAnimationFrame(animateBalloons);
     }
 
+    /* ================= Rebuild balloons (used by restart) ================= */
+    function rebuildBalloons(){
+      // remove any existing balloons and falling items
+      document.querySelectorAll('.balloon, .falling').forEach(el=>el.remove());
+      balloons.length = 0;
+      // recreate one balloon for each image
+      imagesList.forEach(obj=>createBalloon(obj));
+    }
+
     /* ================= Restart ================= */
     function restartGame(){
-      correctCount=0;
-      gameContainer.querySelectorAll('.falling').forEach(i=>i.remove());
-      train.querySelectorAll('.slot-img').forEach(b=>b.innerHTML='');
-      train.querySelectorAll('.wagon').forEach(w=>w.classList.remove('correct','is-correct','is-wrong'));
-      train.classList.remove('depart');
+      // reset counters/flags
+      correctCount = 0;
+      activityCompleted = false;
+      state.completed = false;
+
+      // clear feedback & UI
+      feedback.style.display = 'none';
       congrats.classList.remove('show');
-      document.querySelectorAll('.locomotive').forEach(l=>l.remove());
-      // sounds off
+      train.classList.remove('depart');
+      document.body.classList.remove('animating');
+
+      // stop & reset sounds
       try{ locoLoop.pause(); locoLoop.currentTime = 0; }catch(e){}
       try{ whistle.pause(); whistle.currentTime = 0; }catch(e){}
-      // reset fresh flags
-      resetFresh();
+
+      // remove any locomotive on screen
+      document.querySelectorAll('.locomotive').forEach(l=>l.remove());
+
+      // clear wagons’ images and visual states
+      train.querySelectorAll('.slot-img').forEach(b=>b.innerHTML='');
+      train.querySelectorAll('.wagon').forEach(w=>w.classList.remove('correct','is-correct','is-wrong'));
+
+      // rebuild balloons fresh
+      rebuildBalloons();
     }
   </script>
 </body>
