--- a/Level0/Unit1/fases.html
+++ b/Level0/Unit1/fases.html
@@ -1,213 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hannah English Course</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- Firebase Configuration and Initialization -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-    <script>
-        const firebaseConfig = {
-            apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
-            authDomain: "hannahenglishcourse.firebaseapp.com",
-            projectId: "hannahenglishcourse",
-            storageBucket: "hannahenglishcourse.appspot.com",
-            messagingSenderId: "449818788486",
-            appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
-            measurementId: "G-07VVJG9LRS",
-            databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
-        };
-        firebase.initializeApp(firebaseConfig);
-    </script>
-    <style>
-        .login-link { cursor: pointer; }
-        .user-dropdown {
-            display: none;
-            flex-direction: column;
-            position: absolute;
-            top: 50px;
-            right: 0;
-            background-color: #fff;
-            border: 1px solid #ccc;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-            z-index: 9999;
-        }
-        .user-dropdown .dropdown-item {
-            padding: 10px 20px;
-            color: #333;
-            text-decoration: none;
-        }
-        .user-dropdown .dropdown-item:hover {
-            background-color: #f0f0f0;
-        }
-        .login-container {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            display: flex;
-            align-items: center;
-            padding: 8px 12px;
-            background-color: #fff;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-            z-index: 9999;
-        }
-        .user-icon {
-            width: 30px;
-            height: 30px;
-            border-radius: 50%;
-            margin-right: 8px;
-        }
-        .user-name {
-            margin: 0;
-            font-size: 14px;
-            color: #333;
-        }
-        .title-container {
-            text-align: center;
-            margin-top: 20px;
-        }
-        .level-unit-info {
-            text-align: center;
-            font-size: 24px;
-            font-weight: bold;
-            color: black;
-            margin-top: 5px;
-        }
-        /* O SVG cobre toda a área de mapContainer e fica atrás dos .phase */
-        #linesSvg {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-            z-index: 0;
-        }
-        .phase {
-            position: absolute;
-            transform: translate(-50%, -50%);
-            text-align: center;
-            z-index: 1;
-        }
- .phase-img {
-    border-radius: 50%;
-    object-fit: cover;
-    width: 60px;
-    height: 60px;
-}
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Hannah English Course</title>
+  <link rel="stylesheet" href="style.css">
 
-@media (orientation: portrait) {
+  <!-- Firebase Configuration and Initialization -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
+      authDomain: "hannahenglishcourse.firebaseapp.com",
+      projectId: "hannahenglishcourse",
+      storageBucket: "hannahenglishcourse.appspot.com",
+      messagingSenderId: "449818788486",
+      appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
+      measurementId: "G-07VVJG9LRS",
+      databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
+    };
+    firebase.initializeApp(firebaseConfig);
+  </script>
+
+  <style>
+    /* ====== Base ====== */
+    * { margin:0; padding:0; box-sizing:border-box; }
+    html, body {
+      width: 100%;
+      min-height: 100svh; /* lida melhor com barras do mobile */
+      background: url('../../imagens/fundo.png') repeat;
+      font-family: "Times New Roman", Times, serif;
+      -webkit-user-select: none;
+      user-select: none;
+      touch-action: manipulation;
+    }
+
+    /* ====== Login / User ====== */
+    .login-link { cursor: pointer; }
+    .user-dropdown {
+      display: none;
+      flex-direction: column;
+      position: absolute;
+      top: 50px;
+      right: 0;
+      background-color: #fff;
+      border: 1px solid #ccc;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+      z-index: 9999;
+    }
+    .user-dropdown .dropdown-item {
+      padding: 10px 20px;
+      color: #333;
+      text-decoration: none;
+    }
+    .user-dropdown .dropdown-item:hover { background-color: #f0f0f0; }
+
+    .login-container {
+      position: absolute;
+      top: 20px; right: 20px;
+      display: flex; align-items: center;
+      padding: 8px 12px;
+      background: #fff;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      z-index: 9999;
+    }
+    .user-icon {
+      width: 30px; height: 30px; border-radius: 50%; margin-right: 8px;
+    }
+    .user-name { margin: 0; font-size: 14px; color: #333; }
+
+    /* ====== Header / Título ====== */
+    .title-container {
+      text-align: center;
+      margin-top: 20px;
+      position: relative;
+      z-index: 2; /* acima do SVG */
+    }
+    .title-image {
+      display: block;
+      margin: 0 auto;
+      width: min(60vw, 480px);
+      height: auto;
+    }
+    .level-unit-info {
+      text-align: center;
+      font-size: 24px;
+      font-weight: bold;
+      color: black;
+      margin-top: 5px;
+    }
+
+    /* ====== Mapa / Fases / Linhas ====== */
+    .map-container{
+      position: relative;
+      width: 100%;
+      min-height: 100svh; /* garante tela cheia ao menos */
+      height: auto;       /* será ajustado via JS conforme # de fases */
+      overflow: visible;
+    }
+
+    /* O SVG cobre toda a área do mapContainer e fica atrás das .phase */
+    #linesSvg{
+      position: absolute;
+      inset: 0;           /* top:0; right:0; bottom:0; left:0; */
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      z-index: 0;
+      display: block;
+    }
+
+    .phase {
+      position: absolute;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      z-index: 1;
+    }
+
     .phase-img {
-        width: 70px;
-        height: 70px;
+      border-radius: 50%;
+      object-fit: cover;
+      width: 60px; height: 60px;
     }
-}
+    @media (orientation: portrait) {
+      .phase-img { width: 70px; height: 70px; }
+    }
+    @media (orientation: landscape) {
+      .phase-img { width: 100px; height: 100px; }
+    }
 
-@media (orientation: landscape) {
-    .phase-img {
-        width: 100px;
-        height: 100px;
+    .phase.active img.phase-img {
+      box-shadow: 0 0 20px rgba(255, 255, 0, 0.6);
     }
-}
 
-.phase.active img.phase-img {
-    box-shadow: 0 0 20px rgba(255, 255, 0, 0.6);
-}
-        .lock-icon {
-            position: absolute;
-            width: 20px;
-            height: 20px;
-            bottom: -10px;
-            right: -10px;
-        }
-        .player {
-    position: absolute;
-    width: 90px;        /* tamanho bem maior */
-    height: 90px;
-    transform: translate(-50%, -10%);  /* reposiciona para tangenciar a fase */
-    z-index: 3;
-    pointer-events: none;
-}
-        .path-blue {
-            stroke: #3b82f6;
-            stroke-width: 4;
-            fill: none;
-        }
-       .unlock-gif {
-    position: absolute;
-    width: 140px;
-    height: 140px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 20;
-    pointer-events: none;
-    animation: pop-in 0.3s ease-out;
-}
-        .back-button {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            text-decoration: none;
-            background-color: #000;
-            color: #fff;
-            padding: 8px 12px;
-            border-radius: 4px;
-            z-index: 9999;
-        }
-@keyframes pop-in {
-    from {
-        transform: scale(0.6) translate(-50%, -50%);
-        opacity: 0;
+    .lock-icon {
+      position: absolute;
+      width: 20px; height: 20px;
+      bottom: -10px; right: -10px;
     }
-    to {
-        transform: scale(1) translate(-50%, -50%);
-        opacity: 1;
+
+    .player {
+      position: absolute;
+      width: 90px; height: 90px;      /* maior para tangenciar a fase */
+      transform: translate(-50%, -10%);
+      z-index: 3;
+      pointer-events: none;
     }
-}
-    </style>
+
+    .path-blue {
+      stroke: #3b82f6;
+      stroke-width: 4;
+      fill: none;
+    }
+
+    .unlock-gif {
+      position: absolute;
+      width: 140px; height: 140px;
+      top: 50%; left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 20;
+      pointer-events: none;
+      animation: pop-in 0.3s ease-out;
+    }
+
+    .back-button {
+      position: absolute;
+      top: 20px; left: 20px;
+      text-decoration: none;
+      background-color: #000;
+      color: #fff;
+      padding: 8px 12px;
+      border-radius: 4px;
+      z-index: 9999;
+    }
+
+    @keyframes pop-in {
+      from { transform: scale(0.6) translate(-50%, -50%); opacity: 0; }
+      to   { transform: scale(1)   translate(-50%, -50%); opacity: 1; }
+    }
+  </style>
 </head>
 <body>
-    <!-- Caixa de Login -->
-    <div id="loginContainer" class="login-container">
-        <a href="Formulario/login.html" id="loginLink" class="login-link">Login</a>
-        <!-- Dropdown de Usuário -->
-        <div id="userDropdown" class="user-dropdown"></div>
+  <!-- Caixa de Login -->
+  <div id="loginContainer" class="login-container">
+    <a href="Formulario/login.html" id="loginLink" class="login-link">Login</a>
+    <div id="userDropdown" class="user-dropdown"></div>
+  </div>
+
+  <!-- Botão Back -->
+  <a href="javascript:history.back()" class="back-button">Back</a>
+
+  <div class="map-container" id="mapContainer">
+    <!-- Título centralizado -->
+    <div class="title-container">
+      <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image">
+      <div id="levelUnitInfo" class="level-unit-info"></div>
     </div>
 
-    <!-- Botão Back -->
-    <a href="javascript:history.back()" class="back-button">Back</a>
+    <!-- SVG para linhas (atrás das fases) -->
+    <svg id="linesSvg" xmlns="http://www.w3.org/2000/svg"></svg>
+    <!-- As fases serão inseridas via script.js -->
+  </div>
 
-    <div class="map-container" id="mapContainer" style="position: relative; width: 100%;">
-        <!-- Imagem de título centralizada sobre o fundo -->
-        <div class="title-container">
-            <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image">
-            <!-- Nível e Unidade -->
-            <div id="levelUnitInfo" class="level-unit-info"></div>
-        </div>
-
-        <!-- SVG para as linhas (fica atrás dos elementos .phase) -->
-        <svg id="linesSvg"></svg>
-        <!-- As fases serão inseridas via script.js -->
-    </div>
-
-    <!-- Script para forçar reload ao mudar orientação -->
-    <script>
-        let prevOrientation = window.innerWidth > window.innerHeight ? 'landscape' : 'portrait';
-        window.addEventListener('resize', () => {
-            const currentOrientation = window.innerWidth > window.innerHeight ? 'landscape' : 'portrait';
-            if (currentOrientation !== prevOrientation) {
-                location.reload();
-            }
-        });
-    </script>
-
-    <script src="atividadesPorTrecho.js"></script>
-    <script src="script.js"></script>
+  <!-- Importa configuração de atividades e lógica -->
+  <script src="atividadesPorTrecho.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
