--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -71,20 +71,39 @@
   .option.img-only .label{display:none}
   .option .label{font-size:20px;font-weight:800;letter-spacing:.2px}
   .option .sub{font-size:13px;color:var(--muted)}
+
+  /* === Quadrado roxo + tique verde (sem imagem) === */
+  .square-outline{
+    width:42px;height:42px;border:6px solid var(--sq,#7c3aed);
+    border-radius:10px;background:transparent;display:inline-block;
+    position:relative;transition:border-color .2s ease, background .2s ease, transform .15s ease;
+  }
+  .option.ok .square-outline{border-color:#16a34a;background:#dcfce7}
+  .option.ok .square-outline::after{
+    content:"✔";position:absolute;inset:0;display:flex;align-items:center;justify-content:center;
+    color:#166534;font-size:22px;font-weight:900;animation:pop-in .18s ease-out;
+  }
+  .option.err .square-outline{border-color:#ef4444;background:#fee2e2}
+  @keyframes pop-in{from{transform:scale(.6);opacity:0}to{transform:scale(1);opacity:1}}
+
   .option.ok{border-color:#86efac;animation:okPulse .4s ease}
   .option.err{border-color:#fecaca;animation:shake .22s ease}
   @keyframes okPulse{0%{box-shadow:0 0 0 0 rgba(34,197,94,.4)}100%{box-shadow:0 0 0 18px rgba(34,197,94,0)}}
   @keyframes shake{0%{transform:translateX(0)}25%{transform:translateX(-4px)}50%{transform:translateX(4px)}75%{transform:translateX(-3px)}100%{transform:translateX(0)}}
+
   .footer{margin-top:8px;display:flex;justify-content:space-between;align-items:center;gap:8px}
   .pill{background:#eef2ff;color:#3949ab;padding:8px 12px;border-radius:999px;font-size:12px;border:1px solid #d7defc}
   .next-btn{border:none;background:linear-gradient(90deg,#3b82f6,#22c55e);color:#fff;font-weight:800;padding:12px 16px;border-radius:14px;cursor:pointer;box-shadow:0 10px 18px rgba(34,197,94,.25);opacity:.3;pointer-events:none;transition:opacity .2s ease, transform .06s ease}
   .next-btn.ready{opacity:1;pointer-events:auto}
   .next-btn:active{transform:translateY(1px)}
+
   .confetti{position:absolute;inset:0;pointer-events:none;overflow:hidden}
   .piece{position:absolute;width:10px;height:10px;background:hsl(var(--h) 80% 60%);top:-12px;border-radius:2px;animation:drop linear forwards}
   @keyframes drop{to{transform:translateY(120vh) rotate(540deg)}}
   .toast{position:fixed;left:50%;bottom:24px;transform:translateX(-50%);background:#111827;color:#fff;padding:10px 14px;border-radius:12px;font-size:14px;box-shadow:var(--shadow);opacity:.96}
   .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0}
+
+  /* ORDER/MATCH infra (mantida) */
   .build-wrap{margin-top:8px}
   .build-tray{min-height:56px;background:#eef4ff;border:2px dashed #cfe0ff;border-radius:14px;padding:10px;display:flex;flex-wrap:wrap;gap:8px;align-items:center}
   .word-chip{background:#fff;border:2px solid #dbe5ff;border-radius:12px;padding:8px 12px;font-weight:800;box-shadow:0 2px 6px rgba(0,0,0,.05);user-select:none}
@@ -95,10 +114,14 @@
   .match-col{display:flex;flex-direction:column;gap:12px}
   .option.selected{outline:3px solid #60a5fa}
   .option.matched{border-color:#86efac;opacity:.65;pointer-events:none}
+
+  /* Linha de lacuna */
   .blank{display:inline-block;min-width:56px;height:1em;border-bottom:3px solid #cfe0ff;margin:0 6px -2px}
+
   .icon-btn[disabled]{opacity:.4;pointer-events:none}
   .is-hidden{display:none!important}
   .build-grid{display:grid;gap:12px;grid-template-columns:repeat(2,minmax(0,1fr))}
+
   @media (max-width:540px){
     .q-media{aspect-ratio:4/3;padding:6px}
     .option{min-height:68px;padding:12px}
@@ -120,6 +143,8 @@
   .option.word-only{gap:0;justify-content:center}
   .option.word-only .label{width:100%;text-align:center;font-size:22px;font-weight:800}
   .build-btn:disabled{opacity:.45;pointer-events:none;filter:grayscale(.2)}
+
+  /* Loader */
   .loading{position:fixed;inset:0;background:rgba(255,255,255,.75);display:flex;align-items:center;justify-content:center;z-index:9999;backdrop-filter:blur(2px);font-weight:700;color:#334155}
   .spinner{width:42px;height:42px;border-radius:50%;border:4px solid #c7d2fe;border-top-color:#3b82f6;animation:spin 1s linear infinite;margin-right:10px}
   @keyframes spin{to{transform:rotate(360deg)}}
@@ -172,7 +197,7 @@
 
 <script>
 (function(){
-  // ====== Params normalizados ======
+  /* ===== Params normalizados ===== */
   const params = new URLSearchParams(location.search);
   const rawLevel = (params.get('level') ?? '').trim();
   const rawUnit  = (params.get('unit')  ?? '').trim();
@@ -190,14 +215,14 @@
   const BASE  = `../../${levelDir}/${unitDir}/QA`;
   const QFILE = `${BASE}/questions.txt`;
 
-  // ====== Estado ======
+  /* ===== Estado ===== */
   let questions = [];
   let isReading = false;
   let currentAudio = null;
   let idx = 0;
   let answered = false;
 
-  // ====== Elementos ======
+  /* ===== Elementos ===== */
   const subtitle   = document.getElementById('subtitle');
   const pill       = document.getElementById('pill');
   const bar        = document.getElementById('bar');
@@ -212,7 +237,7 @@
   const liveEl     = document.getElementById('live');
   const loadingEl  = document.getElementById('loading');
 
-  // Avatar
+  /* Avatar */
   (function(){
     const avatarEl = document.getElementById('avatar');
     const img = new Image();
@@ -223,14 +248,14 @@
   })();
   pill.textContent = `${levelDir} • ${unitDir}${fase ? ' • Fase '+fase : ''}`;
 
-  // Sons básicos (opcional)
+  /* Sons leves */
   const sCorrect = new Audio(`${BASE}/sounds/correct.mp3`);
   const sWrong   = new Audio(`${BASE}/sounds/wrong.mp3`);
   const sTap     = new Audio(`${BASE}/sounds/tap.mp3`);
   const sNext    = new Audio(`${BASE}/sounds/next.mp3`);
   [sCorrect,sWrong,sTap,sNext].forEach(a=>{a.preload='auto'});
 
-  // ====== Loader + fetch ======
+  /* ===== Loader + fetch ===== */
   showLoader(true);
   fetch(QFILE, {cache:'no-store'})
     .then(r => {
@@ -255,7 +280,7 @@
     })
     .finally(()=> showLoader(false));
 
-  // ====== Utils de prompt/tts com blanks ======
+  /* ===== Prompt/blank utils ===== */
   function renderPromptWithBlanks(str){
     const s = String(str ?? '');
     return s
@@ -268,7 +293,7 @@
       .replace(/_{3,}/g, '');
   }
 
-  // ====== Áudio helpers ======
+  /* ===== Áudio helpers ===== */
   function stopAllAudio(){
     try { speechSynthesis.cancel(); } catch(e){}
     if (currentAudio){
@@ -286,8 +311,12 @@
       speechSynthesis.speak(u);
     }catch(e){}
   }
+  function speakFriendly(pool){
+    const pick = pool[(Math.random()*pool.length)|0];
+    speak(pick);
+  }
 
-  // ====== Renderização ======
+  /* ===== Render ===== */
   function renderQuestion(){
     answered = false;
     btnNext.disabled = true;
@@ -304,8 +333,16 @@
     bar.style.width = pct + '%';
     statusPill.textContent = `Question ${idx+1}/${questions.length}`;
 
+    // Prompt com linha no lugar do marcador e fallback (comportamento antigo)
     const rawPrompt = q.prompt || '—';
     promptEl.innerHTML = renderPromptWithBlanks(rawPrompt);
+    if (q.type === 'fillblank' && !/\{blank\}/.test(rawPrompt) && !/_{3,}/.test(rawPrompt)) {
+      const span = document.createElement('span');
+      span.className = 'blank';
+      span.setAttribute('aria-hidden','true');
+      promptEl.appendChild(document.createTextNode(' '));
+      promptEl.appendChild(span);
+    }
 
     btnPlayPrompt.onclick = () => { if (!isReading) playPrompt(q); };
     btnRepeat.onclick     = () => {
@@ -348,7 +385,7 @@
     };
   }
 
-  // ====== Opção ======
+  /* ===== Opção ===== */
   function makeOption(q, opt){
     const o = (typeof opt === 'string') ? { label: opt, value: opt } : { ...opt };
 
@@ -406,7 +443,7 @@
     return btn;
   }
 
-  // ====== Resposta ======
+  /* ===== Resposta ===== */
   function handleAnswer(q, opt, btn){
     if(answered) return;
     const isCorrect = normalize(opt.value) === normalize(q.answer);
@@ -443,7 +480,7 @@
     });
   }
 
-  // ====== Prompt audio/TTS com fallback ======
+  /* ===== Prompt: MP3 (se houver) com fallback para TTS ===== */
   function playPrompt(q){
     stopAllAudio();
     const ttsText = q.targetWord || q.tts || ttsSanitize(q.prompt || '');
@@ -459,7 +496,7 @@
     }
   }
 
-  // ====== Fim ======
+  /* ===== Fim ===== */
   function finish(){
     try { stopAllAudio(); } catch(e){}
     try { speechSynthesis.cancel(); } catch(e){}
@@ -481,7 +518,7 @@
     btnRepeat.classList.add('is-hidden');
   }
 
-  // ====== Helpers ======
+  /* ===== Helpers ===== */
   function toast(msg){
     const t=document.createElement('div');
     t.className='toast';
@@ -504,10 +541,6 @@
       setTimeout(()=>p.remove(), dur+delay+200);
     }
   }
-  function speakFriendly(pool){
-    const pick = pool[(Math.random()*pool.length)|0];
-    speak(pick);
-  }
   function shuffle(arr){
     for(let i=arr.length-1;i>0;i--){
       const j = Math.floor(Math.random()*(i+1));
@@ -524,7 +557,7 @@
   }
   function showLoader(v){ if (loadingEl) loadingEl.style.display = v ? 'flex' : 'none'; }
 
-  // ====== ORDER ======
+  /* ===== ORDER (mantido) ===== */
   function renderOrderQuestion(q){
     optionsEl.classList.add('is-order');
     const words = q.options.map(w => String(w));
@@ -620,7 +653,7 @@
     }
   }
 
-  // ====== MATCH ======
+  /* ===== MATCH (mantido) ===== */
   function renderMatchQuestion(q){
     const sourcePairs = Array.isArray(q.pairs) ? q.pairs : [];
     const normItem = (it) => {
@@ -751,7 +784,7 @@
     rightShuf.forEach(item => colR.appendChild(makeRightBtn(item)));
   }
 
-  // ====== Seleção: toca MP3 se houver; senão TTS ======
+  /* ===== Seleção: MP3 se houver; senão TTS ===== */
   function speakSelectedThenCheck(q, o, btn){
     if (answered || isReading) return;
     isReading = true;
@@ -782,7 +815,6 @@
         a.onerror = () => { currentAudio = null; speak(say); setTimeout(safeFinish, 600); };
         a.play().catch(() => { currentAudio = null; speak(say); setTimeout(safeFinish, 600); });
 
-        // guarda-chuva para casos sem evento
         setTimeout(safeFinish, 3500);
       }catch{
         speak(say);
