--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -122,6 +122,24 @@
   .loading{position:fixed;inset:0;background:rgba(255,255,255,.75);display:flex;align-items:center;justify-content:center;z-index:9999;backdrop-filter:blur(2px);font-weight:700;color:#334155}
   .spinner{width:42px;height:42px;border-radius:50%;border:4px solid #c7d2fe;border-top-color:#3b82f6;animation:spin 1s linear infinite;margin-right:10px}
   @keyframes spin{to{transform:rotate(360deg)}}
+/* reserve espaço à direita do cabeçalho para o botão Back */
+.header{
+  position: relative;
+  padding-right: 110px;   /* << cria “zona livre” para o Back */
+}
+
+/* garante que o Back fique por cima e alinhado */
+#back-button{
+  position: absolute;
+  right: 16px;
+  top: 10px;
+  z-index: 5;
+}
+
+/* em telas pequenas, um pouco menos de padding já resolve */
+@media (max-width: 540px){
+  .header{ padding-right: 92px; }
+}
 </style>
 </head>
 <body>
